--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "agda/.agda/agda-stdlib"]
     path = agda/.agda/agda-stdlib
     url = https://github.com/agda/agda-stdlib.git
+
+[submodule "agda/.agda/cubical"]
+    path = agda/.agda/cubical
+    url = https://github.com/agda/cubical.git
